--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-  "name": "bienesraices",
+  "name": "realstate-landing-page",
   "version": "1.0.0",
-  "description": "Curso Desarrollo Web Completo",
+  "type": "module",
+  "description": "Real Estate landing page",
   "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp"
   },
-  "author": "Juan De La Torre",
+  "author": "Luis Duran",
   "license": "ISC",
   "devDependencies": {
-    "cssnano": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-cache": "^1.1.3",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^4.0.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-terser-js": "^5.2.2",
-    "gulp-webp": "^4.0.1",
-    "sass": "^1.49.9",
-    "terser": "^4.8.0"
+    "gulp": "^5.0.1",
+    "gulp-sass": "^6.0.1",
+    "sass": "^1.89.2"
   }
 }
