--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
   "author": "Luis Duran",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "cssnano": "^5.1.0",
     "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
-    "sass": "^1.89.2"
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-webp": "^4.0.1",
+    "sass": "^1.89.2",
+    "terser": "^5.44.1"
   }
 }
