add: name script updated

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Real Estate landing page",
   "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp"
+    "build": "gulp"
   },
   "author": "Luis Duran",
   "license": "ISC",
